--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,17 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+.active{
+    @apply text-red-500
+}
+/* .active::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    top:0;
+    height: 100%;
+    width: 4px;
+    border: red;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+} */
