--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,5 @@
 @plugin "daisyui";
 
 .active{
-    @apply text-red-500
+    @apply text-[#278E5E] relative
 }
-/* .active::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    top:0;
-    height: 100%;
-    width: 4px;
-    border: red;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-} */
